# Palimpsest

./: .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TRADEMARKS.md  go.mod  go.sum
palimpsest-conformal/: README.md  pyproject.toml
palimpsest-conformal/.github/: copilot-instructions.md
palimpsest-conformal/docs/: GATES.md
palimpsest-conformal/docs/adr/: ADR-001-product-thesis.md  ADR-002-nonconformity-score.md  ADR-003-stratification-budget.md  ADR-004-drift-separation.md  ADR-005-flywheel-v1.md  ADR-006-deployment-ladder.md  ADR-007-signal-triage-taxonomy.md  ADR-008-incident-fingerprint-corpus.md  TEMPLATE.md
palimpsest-conformal/docs/fixtures/: README.md
palimpsest-conformal/tests/: seeds.py  test_seeds.py
palimpsest-conformal/tests/calibrate/: _pipeline.py  test_calibrate_unit.py  test_decay_drift.py  test_dtaci_regret.py  test_g1b_adaptive_stack.py  test_per_statistic.py  test_shuffled_control.py
palimpsest-conformal/tests/drift/: test_g3_boiling_frog.py  test_g4_input_shift.py
palimpsest-conformal/tests/evt/: test_g5_evt_recovery.py
palimpsest-conformal/tests/flywheel/: test_g7_counterfactual_audit.py
palimpsest-conformal/tests/forecast/: test_forecast.py  test_g2_zero_skill_control.py
palimpsest-conformal/tests/score/: test_g1_coverage.py  test_score.py
palimpsest-conformal/tests/sketch/: test_g6_merge_algebra.py  test_sketch_contract.py
palimpsest-conformal/tests/synth/: _helpers.py  test_bimodal_fleet.py  test_determinism.py  test_heavy_tail.py  test_heteroscedastic_pair.py  test_plots.py  (+4 more)
(+334 files in other folders)
